infra/k8s/aplicacao/mcpserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcpserver
  namespace: mcp-apis
  labels:
    app: mcpserver
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: "mcp-route"
spec:
  selector:
    app: mcpserver
  ports:
    - name: http
      port: 4000
      targetPort: 4000
